<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodos"
    tools:context=".Info_mensual" >

    <TextView
        android:id="@+id/TxtDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detalle"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtDetalle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LblIngCadenas"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/ingreso_cadenas"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TxtIngCadenas"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LblRentaCad"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/renta_cadenas"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TxtRentaCad"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LblIngWM"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/ingreso_WM"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TxtIngWM"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LblRentaWM"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/renta_WM"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TxtRentaWM"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LblIngreso"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/total_ingresos"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TxtIngreso"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LblRenta"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/total_renta"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TxtRenta"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LblEquipos"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/total_equipos"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TxtEquipos"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/container_PV"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:id="@+id/LblPV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en_PV"
            android:typeface="sans" />

        <TextView
            android:id="@+id/LblBasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basc"
            android:typeface="sans" />

        <TextView
            android:id="@+id/LblKR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kr"
            android:typeface="sans" />

        <TextView
            android:id="@+id/LblPel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pel"
            android:typeface="sans" />

        <TextView
            android:id="@+id/LblVid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vid"
            android:typeface="sans" />

        <TextView
            android:id="@+id/LblChic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chic"
            android:typeface="sans" />

        <TextView
            android:id="@+id/LblSill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sill"
            android:typeface="sans" />

        <TextView
            android:id="@+id/LblCab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cabina"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:id="@+id/LblWM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en_WM" />

        <TextView
            android:id="@+id/LblBascWM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basc" />

        <TextView
            android:id="@+id/LblKRWM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kr" />

        <TextView
            android:id="@+id/LblPelWM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pel" />

        <TextView
            android:id="@+id/LblVidWM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vid" />

        <TextView
            android:id="@+id/LblChicWM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chic" />

        <TextView
            android:id="@+id/LblSillWM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sill" />

        <TextView
            android:id="@+id/LblCabWM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cabina" />

    </LinearLayout>

    <Button
        android:id="@+id/BtnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>